# clip-store

./: README.md  app.py  nest.py  pyproject.toml
templates/: clip_player.html  index.html
